Changes Enter icon in BottomSheet to Send icon, also doesn't close soft keyboard after adding new task.

--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -15,7 +15,8 @@
         android:inputType="text"
         android:hint="Add new task"
         android:background="@drawable/edit_text_shape"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:imeOptions="actionSend"/>
 
     <GridLayout
         android:layout_width="wrap_content"
