--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".TaskItemActivity"
-    android:background="@drawable/gradient_background">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <View
-            android:id="@+id/lineView"
-            android:layout_width="30dp"
-            android:layout_height="0.5dp"
-            android:background="@drawable/divider_line"
-            android:layout_centerVertical="true"/>
-
-        <TextView
-            android:id="@+id/superTaskTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:layout_toEndOf="@id/lineView"
-            android:layout_margin="8dp"/>
-
-    </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
+        android:orientation="vertical"
+        android:background="@drawable/gradient_background">
 
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/lineView"
+                android:layout_width="30dp"
+                android:layout_height="0.5dp"
+                android:background="@drawable/divider_line"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:id="@+id/superTaskTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:layout_toEndOf="@id/lineView"
+                android:layout_margin="8dp"/>
+
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
