--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -5,13 +5,13 @@
     android:fillViewport="true"
     tools:context=".TaskItemActivity"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/gradient_background">
+        android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
