--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -15,7 +15,7 @@
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <View
