--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    android:padding="16dp"
+    android:padding="20dp"
     android:background="@color/colorPrimary">
 
     <EditText
@@ -16,28 +16,18 @@
         android:hint="Add new task"
         android:background="@drawable/edit_text_shape"
         android:padding="10dp"
-        android:imeOptions="actionSend"/>
+        android:paddingEnd="50dp"
+        android:imeOptions="actionSend"
+        android:layout_centerVertical="true"/>
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:background="@drawable/button_shape"
-            android:layout_margin="10dp"/>
-
-        <Button
+        <View
             android:id="@+id/addTaskButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add"
-            android:background="@drawable/button_shape"
-            android:layout_margin="10dp"/>
+            android:layout_width="40dp"
+            android:layout_height="45dp"
+            android:background="@drawable/ic_send_24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"/>
 
-    </GridLayout>
 
-</LinearLayout>
+</RelativeLayout>
