--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,19 +35,40 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="55dp"/>
 
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:fabSize="normal"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_add_white_24dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"/>
+        android:background="@color/cardview_shadow_start_color"
+        android:padding="4dp">
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/taskEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:inputType="text"
+            android:hint="Add new task"
+            android:background="@drawable/edit_text_shape"
+            android:padding="10dp"
+            android:paddingEnd="35dp"
+            android:imeOptions="actionSend"
+            android:layout_centerVertical="true"/>
+
+        <View
+            android:id="@+id/addTaskButton"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:background="@drawable/ic_send_24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="5dp"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
