Changes Toolbar to androidx support library Toolbar version and fixes problems with menu functions not getting called. Also removes unused TaskCategory.java file.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Toolbar
-            android:id="@+id/toolBar"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -30,7 +30,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"/>
 
-        </Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
