--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,11 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@drawable/divider_line"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
@@ -44,8 +49,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/cardview_shadow_start_color"
-        android:padding="4dp">
+        android:background="@color/colorAccent"
+        android:padding="4dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp">
 
         <EditText
             android:id="@+id/taskEditText"
@@ -53,7 +60,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:inputType="text"
-            android:hint="Add new task"
+            android:hint="Enter new task"
             android:background="@drawable/edit_text_shape"
             android:padding="10dp"
             android:paddingEnd="35dp"
