Functionality for adding lists like populating spinner with list and saving each item under same parent in Firebase completed, also other minor changes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:hint="Enter new task"
             android:background="@drawable/edit_text_shape"
             android:padding="10dp"
