--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:inputType="text"
+            android:inputType="textCapWords"
             android:hint="Enter name of new list"
             android:background="@drawable/edit_text_shape"
             android:padding="10dp"
