--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,17 +4,7 @@
 
     <item
         android:id="@+id/addList"
-        android:title="Add a new list"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/menuItem2"
-        android:title="Two"
-        app:showAsAction="never"/>
-
-    <item
-        android:id="@+id/menuItem3"
-        android:title="Three"
+        android:title="Add New List"
         app:showAsAction="never"/>
 
 </menu>
