Adds Firebase authentication, activities and functionality for registering and logging in, and a progress bar while loading data in main activity.

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,4 +7,9 @@
         android:title="Add New List"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/logOut"
+        android:title="Log Out"
+        app:showAsAction="never"/>
+
 </menu>
