--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,10 +11,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="@string/register"
         android:textSize="30sp"
-        android:layout_marginTop="80dp"
-        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="120dp"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:gravity="center_horizontal"/>
 
@@ -23,33 +22,35 @@
         android:id="@+id/registerEmailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
-        android:textColorHint="@color/colorLight"
-        android:textColor="@color/colorLight"
+        android:textColorHint="@color/colorHintGray"
+        android:textColor="@android:color/white"
         android:padding="16dp"
-        android:minHeight="50dp"/>
+        android:minHeight="50dp"
+        android:autofillHints="emailAddress" />
 
     <EditText
         android:id="@+id/registerPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:background="@drawable/edit_text_background"
-        android:textColorHint="@color/colorLight"
-        android:textColor="@color/colorLight"
+        android:textColorHint="@color/colorHintGray"
+        android:textColor="@android:color/white"
         android:padding="16dp"
         android:inputType="textPassword"
-        android:minHeight="50dp"/>
+        android:minHeight="50dp"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="@string/register"
         android:background="@drawable/button_background"
         android:layout_marginTop="16dp"/>
 
@@ -58,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Already have an account? Log in here!"
+        android:text="@string/log_in_here"
         android:gravity="center_horizontal"/>
 
 </LinearLayout>
