--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,6 +8,11 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/renameList"
+        android:title="@string/menu_rename_list"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/logOut"
         android:title="@string/menu_log_out"
         app:showAsAction="never"/>
