--- a/app/src/main/res/layout/activity_rename_list.xml
+++ b/app/src/main/res/layout/activity_rename_list.xml
@@ -59,7 +59,7 @@
             android:id="@+id/renameListButton"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:background="@drawable/ic_add_24dp"
+            android:background="@drawable/ic_edit_24dp"
             android:layout_alignParentEnd="true"
             android:layout_margin="5dp"
             android:layout_centerVertical="true"/>
