--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/singleView"
     android:text=""
-    android:layout_margin="14dp"
+    android:padding="14dp"
     android:textSize="20sp">
 
 </TextView>
