--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,13 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/manageLists"
-        android:title="@string/menu_manage_lists"
+        android:id="@+id/addList"
+        android:title="@string/menu_add_list"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/renameList"
         android:title="@string/menu_rename_list"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/deleteList"
+        android:title="@string/menu_delete_list"
         app:showAsAction="never"/>
 
     <item
