Small changes to colors and design.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
+        android:background="@color/colorSecondary"
         android:padding="4dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
@@ -74,6 +74,8 @@
             android:maxLines="1"
             android:padding="10dp"
             android:paddingEnd="35dp"
+            android:textColor="@color/colorText"
+            android:textColorHint="@color/colorHintGray"
             android:importantForAutofill="no"
             tools:ignore="RtlSymmetry" />
 
