--- a/app/src/main/res/drawable/edit_text_shape.xml
+++ b/app/src/main/res/drawable/edit_text_shape.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#f2f2f2"/>
+        android:color="@color/colorPrimaryDarkTransparent"/>
 
     <corners
         android:radius="15dp"/>
