--- a/app/src/main/res/drawable/ic_send_24dp.xml
+++ b/app/src/main/res/drawable/ic_send_24dp.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="24.0">
 
     <path
-        android:fillColor="@color/colorAccent"
+        android:fillColor="@color/colorText"
         android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
 
 </vector>
