Adds isChecked value to tasks with a checkmark box to mark a task as finished or not.

--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -105,7 +105,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="12dp"/>
+            android:layout_marginHorizontal="12dp"/>
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
