--- a/app/src/main/res/layout/single_view.xml
+++ b/app/src/main/res/layout/single_view.xml
@@ -1,10 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="horizontal">
+
+<ImageView
+    android:id="@+id/checkmark_box"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:src="@drawable/ic_unchecked_box_36dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:layout_marginStart="8dp"/>
+
+<TextView
+    android:id="@+id/singleView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/singleView"
     android:text=""
     android:padding="14dp"
-    android:textSize="20sp">
-
-</TextView>
+    android:textSize="20sp" />
+</LinearLayout>
