Fix warnings and errors in layouts.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,9 +47,10 @@
         android:id="@+id/logInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/log_in"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
-        android:layout_marginTop="16dp"/>
+        android:text="@string/log_in"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <TextView
         android:id="@+id/registerHereTextView"
