--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:minLines="1"
                 android:inputType="textMultiLine"
-                android:hint="Add information"
+                android:hint="@string/add_information"
                 android:background="@drawable/edit_text_shape"
                 android:padding="12dp"
                 android:paddingStart="32dp"
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:inputType="text"
-                android:hint="Add subtask"
+                android:hint="@string/add_subtask"
                 android:background="@drawable/edit_text_shape"
                 android:padding="12dp"
                 android:paddingStart="32dp"
