--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -48,9 +48,10 @@
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/register"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
-        android:layout_marginTop="16dp"/>
+        android:text="@string/register"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <TextView
         android:id="@+id/logInHereTextView"
