--- a/app/src/main/res/layout/sub_task_single_view.xml
+++ b/app/src/main/res/layout/sub_task_single_view.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/subTaskSingleView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/subTaskSingleView"
-    android:text=""
+    android:background="@null"
+    android:imeOptions="actionDone"
     android:inputType="text"
     android:padding="8dp"
-    android:textSize="16sp"
+    android:text=""
     android:textColor="@color/colorHintGray"
-    android:background="@null"
-    android:imeOptions="actionDone">
+    android:textSize="16sp"
+    tools:ignore="LabelFor,SpeakableTextPresentCheck"
+    android:importantForAutofill="no">
 
 </EditText>
