Adds use of sharedPreferences in TaskitemActivity and SubTasksRecyclerViewAdapter for retrieving categoryId value instead of putting in intent and adapter instantiation.

--- a/app/src/main/res/layout/activity_task_item.xml
+++ b/app/src/main/res/layout/activity_task_item.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minLines="1"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textCapSentences"
                 android:hint="@string/add_information"
                 android:background="@drawable/edit_text_shape"
                 android:padding="12dp"
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:hint="@string/add_subtask"
                 android:background="@drawable/edit_text_shape"
                 android:padding="12dp"
