--- a/app/src/main/res/layout/sub_task_single_view.xml
+++ b/app/src/main/res/layout/sub_task_single_view.xml
@@ -9,7 +9,7 @@
     android:inputType="text"
     android:padding="8dp"
     android:text=""
-    android:textColor="@color/colorHintGray"
+    android:textColor="@color/colorText"
     android:textSize="16sp"
     tools:ignore="LabelFor,SpeakableTextPresentCheck"
     android:importantForAutofill="no">
