--- a/app/src/main/res/drawable/edit_text_shape.xml
+++ b/app/src/main/res/drawable/edit_text_shape.xml
@@ -8,4 +8,8 @@
     <corners
         android:radius="15dp"/>
 
+    <stroke
+        android:width="0.3dp"
+        android:color="@color/colorText"/>
+
 </shape>
