--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -4,7 +4,7 @@
     style="?android:attr/spinnerDropDownItemStyle"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimary"
     android:ellipsize="marquee"
     android:singleLine="true"
     android:textColor="@android:color/white"/>
